Adding  HTML  Agility to fetch  heading s

--- a/EverlyHealth/EverlyHealth.Business/EverlyHealth.Business.csproj
+++ b/EverlyHealth/EverlyHealth.Business/EverlyHealth.Business.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\EverlyHealth.Models\EverlyHealth.Models.csproj" />
     <ProjectReference Include="..\EverlyHealth.Repository\EverlyHealth.Repository.csproj" />
+    <ProjectReference Include="..\EverlyHealth.Services\EverlyHealth.Services.csproj" />
   </ItemGroup>
 
 </Project>
