--- a/EverlyHealth/EverlyHealth.Services/EverlyHealth.Services.csproj
+++ b/EverlyHealth/EverlyHealth.Services/EverlyHealth.Services.csproj
@@ -8,6 +8,14 @@
 
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.42" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Net.Http.Headers" Version="2.2.8" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EverlyHealth.Models\EverlyHealth.Models.csproj" />
   </ItemGroup>
 
 </Project>
